tests/src/errors/unexisting_symbol/unexisting.rustemo
A: A B Tc;
B: C Tc;

terminals
Tc: 'c';
